<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#808080"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:id="@+id/nameCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/nameCountry"
                android:textSize="24sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/alpha2CodeCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/alpha2CodeCountry"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/regionCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/regionCountry"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:text="@string/subregionCountry"
                android:textSize="18sp"
                android:id="@+id/subregionCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
            <TextView
                android:text="@string/populationCountry"
                android:textSize="18sp"
                android:id="@+id/populationCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
            <TextView
                android:text="area"
                android:textSize="18sp"
                android:id="@+id/areaCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </LinearLayout>
        <Button
            android:id="@+id/detailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seeContinent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>