<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#808080"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:id="@+id/nameContinent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/nameContinent"
                android:textSize="24sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/codeContinent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/codeContinent"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/namelocaleContinent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/nameLocaleContinent"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:text="@string/latitudeContinent"
                android:textSize="18sp"
                android:id="@+id/latitudeContinent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
            <TextView
                android:text="@string/longitudeContinent"
                android:textSize="18sp"
                android:id="@+id/longitudeContinent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>